Fixed overlap of hospital search bar

--- a/PHASE_2/Application_SourceCode/app/src/stylesheets/index.css
+++ b/PHASE_2/Application_SourceCode/app/src/stylesheets/index.css
@@ -115,6 +115,7 @@ h1 {
     opacity: 0.85;
 }
 
+/* Hospital search bar*/
 .search-hospital {
     z-index: 999999;
     position: absolute;
@@ -168,12 +169,16 @@ h1 {
     transition: background-color 0.15s, color 0.15s;
 }
 
+.hospital-list {
+    z-index: 99999;
+}
+
 
 /*Suburb Search Bar*/
 .search-suburb {
-    z-index: 999999;
+    z-index: 88888;
     position: absolute;
-    top: 15%;
+    top: 20%;
     left: 1%;
     height: 30px;
     width: 18%;
